Added Update requests + a LOT OF bug fixes + update structure of postgresql db + multi-stage Dockerfile + db logger + better docker-compose.yml + code optimizations
