# internal/controller/dto/user.go
@@ -1,9 +1,22 @@
 package dto
 
 import (
+	"github.com/wtkeqrf0/you_together/ent"
 	"github.com/wtkeqrf0/you_together/ent/user"
-	"strings"
 )
+
+type DTO interface {
+	MyUserDTO |
+		UserDTO |
+		UpdateUserDTO |
+		UpdateEmailDTO |
+		UpdatePasswordDTO |
+		UpdateUsernameDTO |
+		EmailWithPasswordDTO |
+		EmailDTO |
+		EmailWithCodeDTO |
+		UsernameDTO
+}
 
 // @Description User detail information
 type MyUserDTO struct {
@@ -19,13 +32,8 @@ type MyUserDTO struct {
 	LastName        string        `json:"lastName,omitempty" sql:"last_name" example:"phone"`
 }
 
-func (m *MyUserDTO) CutEmail() {
-	m.Email = (m.Email)[:1] + "**" + (m.Email)[strings.Index(m.Email, "@")-1:]
-}
-
-// @Description User main information
+// @Description User's main information
 type UserDTO struct {
-	Username   string    `json:"username,omitempty" sql:"username" example:"bobbas"`
 	Biography  string    `json:"biography,omitempty" sql:"biography" example:"I'd like to relax"`
 	Role       user.Role `json:"role,omitempty" sql:"role"`
 	FriendsIds []string  `json:"friendsIds,omitempty" sql:"friends_ids" example:"tldtb,kigfv"`
@@ -33,10 +41,34 @@ type UserDTO struct {
 	LastName   string    `json:"lastName,omitempty" sql:"last_name" example:"phone"`
 }
 
-type SignInDTO struct {
-	Email    string `json:"email,omitempty" validate:"required,email" example:"myemail@gmail.com"`
+type UpdateUserDTO struct {
+	Biography string        `json:"biography,omitempty" validate:"required_without_all,gt=140" sql:"biography" example:"I'd like to relax"`
+	Language  user.Language `json:"language,omitempty" validate:"required_without_all" sql:"language"`
+	Theme     user.Theme    `json:"theme,omitempty" validate:"required_without_all" sql:"theme"`
+	FirstName string        `json:"firstName,omitempty" validate:"required_without_all,lte=30" sql:"first_name" example:"Tele"`
+	LastName  string        `json:"lastName,omitempty" validate:"required_without_all,lte=30" sql:"last_name" example:"phone"`
+}
+
+type UpdateEmailDTO struct {
 	Password string `json:"password,omitempty" validate:"required,printascii,gte=4,lte=20" example:"onkr3451"`
-	Device   string `json:"device,omitempty" validate:"required,lt=50" example:"macOS 10.15.7 Chrome 111.0.0"`
+	NewEmail string `json:"newEmail,omitempty" validate:"required,email" example:"myemail@gmail.com"`
+}
+
+type UpdatePasswordDTO struct {
+	NewPassword string `json:"newPassword,omitempty" validate:"required,printascii,gte=4,lte=20" example:"onkr3451"`
+	Email       string `json:"email,omitempty" validate:"required,email" example:"myemail@gmail.com"`
+	Code        string `json:"code,omitempty" validate:"required,len=5" length:"5" example:"I1ELB"`
+}
+
+type UpdateUsernameDTO struct {
+	NewUsername string `json:"newUsername,omitempty" validate:"required,gte=5,lte=20"`
+}
+
+type EmailWithPasswordDTO struct {
+	Email    string        `json:"email,omitempty" validate:"required,email" example:"myemail@gmail.com"`
+	Password string        `json:"password,omitempty" validate:"required,printascii,gte=4,lte=20" example:"onkr3451"`
+	Language user.Language `json:"-"`
+	Theme    user.Theme    `json:"theme,omitempty" example:"DARK"`
 }
 
 type EmailDTO struct {
@@ -44,7 +76,27 @@ type EmailDTO struct {
 }
 
 type EmailWithCodeDTO struct {
-	Email  string `json:"email,omitempty" validate:"required,email" example:"myemail@gmail.com"`
-	Code   string `json:"code,omitempty" validate:"required,len=5" length:"5" example:"I1ELB"`
-	Device string `json:"device,omitempty" validate:"required,lt=50" example:"macOS 10.15.7 Chrome 111.0.0"`
+	Email    string        `json:"email,omitempty" validate:"required,email" example:"myemail@gmail.com"`
+	Code     string        `json:"code,omitempty" validate:"required,len=5" length:"5" example:"I1ELB"`
+	Language user.Language `json:"-"`
+	Theme    user.Theme    `json:"theme,omitempty" example:"DARK"`
+}
+
+type UsernameDTO struct {
+	Username string `json:"username,omitempty" validate:"required,gte=5,lte=20"`
+}
+
+func Convert(user *ent.User) MyUserDTO {
+	return MyUserDTO{
+		Username:        user.Name,
+		Email:           user.Email,
+		IsEmailVerified: user.IsEmailVerified,
+		Biography:       user.Biography,
+		Role:            user.Role,
+		FriendsIds:      user.FriendsIds,
+		Language:        user.Language,
+		Theme:           user.Theme,
+		FirstName:       user.FirstName,
+		LastName:        user.LastName,
+	}
 }
